--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "f1-telemetry-dashboard",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://georgiosbalatzis.github.io/f1-telemetry-dashboard",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -17,7 +18,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -39,6 +42,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
+    "gh-pages": "^4.0.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17"
   }
